packs/machine-qa/versions/1.1.0/files/docs/packs/machine-qa/README.md
# Machine QA Pack

Machine QA registers four reusable proof contracts:

- Terminal check drives a real terminal program through structured PTY steps.
- Terminal inspection pairs checkpoint text with real Terminal captures for a
  separate inspection verdict.
- Machine state check evaluates argv-shaped assertions on the controlled host.
  An assertion that sets `required_session_context` to `gui` executes through
  the logged-in macOS Terminal.app session so it can use the window server and
  login keychain.
- Exploratory mission gives one prose mission to a main-owned QA run. A case
  selects an informed subagent or a context-naive target-machine session as its
  walker. The walker chooses the sequence; deterministic checks still belong
  on Command methods because they are faster, cheaper, and repeatable.

The three scripted methods use Yoke's approved `host_control` runner and
require `test-machine`. Exploratory mission uses `agent_mission` and formally
requires both `test-machine` and `browser-control`; an undeclared substrate is
not provisioned. The Pack contains no host or credential. Those remain in
project-owned capability records and machine-local capability secret files.

The test machine is serial. A named host baseline and every dependent action
execute under one coordination lease. An exploratory mission keeps that lease
while its execution is parked in `awaiting_agent_review`, then releases it on
review submission or abort. On macOS, screenshot, audit-session, and apparently
expired/unrefreshable OAuth failures from SSH are all wrong-session signals;
window-server or login-keychain commands must use the Terminal GUI bridge.
Privacy grants follow the process macOS attributes as the controller: Remote
Login UI actions are attributed to `/usr/libexec/sshd-keygen-wrapper`, while
GUI-bridge screen capture is attributed to Terminal.app. Provision and verify
those paths independently instead of granting every permission to Terminal.
Whole-home goldens have a second boundary: every captured entry is owned by the
test user, and reset prepares only non-preserved live destinations for removal.
Read-only caches and delete-denying macOS ACLs are restored from the sealed
source; the source itself is never made writable or modified.

Prepare the host before saving a `test-machine` capability. The procedure —
disk encryption, automatic login, sleep, remote access and its separate full
disk access grant, developer tools, privacy grants, and authenticated harness
CLIs — is [host-provisioning.md](host-provisioning.md), with an observable
check for every step. It sits on the same substrate boundary as the GUI bridge
rule above. A host that skips a step usually fails later in a way that reads as
agent confusion rather than as missing machine state.

## The four operations a person runs against a machine

Every machine declares its `host_kind` in settings, and each kind implements
the same four operations. They are commands, not procedures to follow by hand:

```text
yoke test-machine verify --project P --machine NAME
yoke test-machine reset --project P --machine NAME [--baseline fresh-host|shell-preconfigured]
yoke test-machine golden-capture --project P --machine NAME [--destination /abs/path] [--probes-file FILE]
yoke test-machine bridge-diagnose --project P --machine NAME
```

- **verify** is the readiness gate. It reaches BOTH registered baselines in
  order, so the box it hands back carries the current Yoke launcher and is
  **not** fresh. Its receipt says so in words.
- **reset** reaches exactly ONE baseline and stops. `fresh-host` is the
  default, and it is the command that hands an operator a clean machine.
- **golden capture** copies the host's home into a new dated baseline
  directory, seals its manifest and probes sidecars, and records the new path
  on the machine — but only after every declared probe passes and no Yoke
  residue is present. It refuses by naming the exact residue path, the exact
  failing probe, or the occupied destination.
- **bridge diagnose** exercises each Terminal-bridge capability on its own and
  names, per failing capability, the host condition to change: the missing
  privacy grant, a console owned by another login, a locked screen, Secure
  Keyboard Entry, or a window that never became frontmost. Reach for it when
  verification reports a bridge failure.

Each runs under the machine's one lease and refuses by name while another
execution holds it. Each records its own receipt, and the machine's page shows
the last one per operation, so what was last done to a box is readable without
asking the person who did it.

The main agent owns the item, operator channel, report, and final verdict.
Walkers are atomic. At a human gate a walker returns the exact action and resume
state; the main agent records it in the item's Progress Log, asks the operator,
then dispatches a fresh walker. Routine perception is discarded. A mission may
not exceed the runtime-supplied artifact limit across its run.

Agent verdicts are `pass`, `fail`, or `undetermined`. An `undetermined` verdict
must name what could not be established and why; it requests an operator
decision and never satisfies an all-pass aggregate.

Method definitions install at `qa/methods/machine-qa.json`. The one-case
installer example installs at `qa/examples/installer-exploration.json` and is
the agent-chosen inverse of a deterministic campaign. The provisioning
procedure installs beside this README at
`docs/packs/machine-qa/host-provisioning.md`. Installed files belong to the
project and may be customized there; the Pack receipt is only the update
baseline.
